--- a/app/views/phones/index.html.erb
+++ b/app/views/phones/index.html.erb
@@ -12,7 +12,8 @@
 
 </table>
 
-<%= link_to 'Create new', new_phone_path, id: 'create-button', remote: true %>
+<%= link_to 'Create new', new_phone_path, id: 'create-button', remote: true %> |
+<%= link_to 'Export as CSV', export_phones_path %>
 
 <br />
 <hr />
