--- a/app/views/phones/index.html.erb
+++ b/app/views/phones/index.html.erb
@@ -12,8 +12,10 @@
 
 </table>
 
+<hr />
 <%= link_to 'Create new', new_phone_path, id: 'create-button', remote: true %> |
-<%= link_to 'Export as CSV', export_phones_path %>
+<%= link_to 'Export as CSV', export_phones_path %> |
+<%= link_to 'Import from CSV', import_phones_path %>
 
 <br />
 <hr />
