Cleanup the code

--- a/app/views/phones/index.html.erb
+++ b/app/views/phones/index.html.erb
@@ -13,7 +13,7 @@
 </table>
 
 <hr />
-<%= link_to 'Create new', new_phone_path, id: 'create-button', remote: true %> |
+<%= link_to 'Create new', new_phone_path, remote: true %> |
 <%= link_to 'Export as CSV', export_phones_path %> |
 <%= link_to 'Import from CSV', import_phones_path %>
 
