--- a/app/views/phones/delete.html.erb
+++ b/app/views/phones/delete.html.erb
@@ -1,8 +1,10 @@
 <%= form_for(@phone, url: { action: :destroy }, html: { method: :delete }) do |f| %>
   <p>Are you sure you want to delete the phone number <%= @phone.number %> (<%= @phone.name %>)?</p>
 
-  <div class="footer">
-    <%= link_to 'No', :back %>
-    <button type="submit">Yes &raquo;</button>
-  </div>
+<hr />
+<%= link_to 'No', :back %> |
+<button type="submit">Yes &raquo;</button>
+
+<br />
+<hr />
 <% end %>
