Added more validations to Phone model

--- a/app/views/phones/_form.html.erb
+++ b/app/views/phones/_form.html.erb
@@ -18,6 +18,8 @@
   <div class="field">
     <%= f.label :number %><br />
     <%= f.text_field :number %>
+    <br />
+    <i>only digits, signs -# and space allowed, also it may starts with +</i>
   </div>
   <div class="actions">
     <%= f.submit %>
