--- a/app/views/phones/import.html.erb
+++ b/app/views/phones/import.html.erb
@@ -2,10 +2,15 @@
 
 <%= form_tag import_phones_path, multipart: true do %>
   <label for="file">File to Upload</label>
-  <%= file_field_tag "file" %>
+  <%= file_field_tag 'file' %>
   <%= submit_tag 'Import' %>
+  <br />
+
+  <%= check_box_tag 'destroy_all' %>
+  <label for="destroy_all">Remove all phone numbers before importing file.</label>
 <% end %>
 
+<p>Note: Rows with empty phone number will be deleted.</p>
 <hr />
 <%= link_to 'Back', phones_path %>
 
