--- a/app/views/phones/_form.html.erb
+++ b/app/views/phones/_form.html.erb
@@ -23,6 +23,6 @@
   </div>
   <div class="actions">
     <%= f.submit %>
-    <%= link_to 'Back', phones_path, id: 'cancel-button' %>
+    <%= link_to 'Back', phones_path, id: 'cancel-form-button' %>
   </div>
 <% end %>
